test/link/section-union/org-conflict.out
FATAL: Section "conflicting address" is defined with address $beef, but also with address $babe
    at section-union/org-conflict.asm(7)
    and also:
    at section-union/org-conflict.asm(7)
Linking aborted with 1 error
---
error: Section already declared as fixed at different address $beef
    at <stdin>(16)
FATAL: Cannot create section "conflicting address" (1 error)
    at <stdin>(16)
